--- a/templates/base.html
+++ b/templates/base.html
@@ -1639,7 +1639,8 @@
           </div>
         </div>
       </div>
-      <div
+
+      <!-- <div
         class="popup-addedtocart js-popupAddToCart closed"
         data-close="50000"
       >
@@ -1692,7 +1693,8 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
+
       <div
         class="sticky-addcart popup-selectoptions js-popupSelectOptions closed"
         data-close="500000"
