--- a/templates/base.html
+++ b/templates/base.html
@@ -1213,9 +1213,9 @@
               </div>
      
               <div class="minicart-prd-action">
-                <a href="#" class="js-product-remove" data-line-number="1"
+                <button style="background: white;border: navajowhite;" data-product-id = {{item.product.id}} class="js-product-remove remove-cart" data-line-number="1" data-action='remove'
                   ><i class="icon-recycle"></i
-                ></a>
+                ></button>
               </div>
 
             </div>
